--- a/src/app/_components/dashboard/main/main.component.html
+++ b/src/app/_components/dashboard/main/main.component.html
@@ -1,1 +1,249 @@
-<p>main works!</p>
+<div class="dashboard-container">
+
+	<app-sidebar></app-sidebar>
+
+	<div class="dashboard-content-container" data-simplebar>
+		<div class="dashboard-content-inner">
+			<!-- Welcome Message -->
+			<div class="dashboard-headline">
+				<h3>Welcome, {{actualUser}}!</h3>
+				<span>We are glad to see you again!</span>
+			</div>
+
+			<div class="row">
+				<!-- Left Column -->
+				<div class="col-xl-8">
+
+					<!-- Make a Post -->
+					<div class="dashboard-box main-box-in-row">
+						<div class="headline">
+							<h3><i class="icon-feather-share-2">
+                			</i> Share Something</h3>
+						</div>
+
+						<div class="content">
+							<div class="boxed-list margin-bottom-30">
+								<div class="boxed-list-headline">
+									<form #postForm="ngForm" (submit)="createPost(postForm, imageInput)">
+									<textarea ngModel id="text" name="text" placeholder="What is going on?"></textarea>
+									<div class="d-flex justify-content-between">
+										<div class="uploadButton">
+											<input class="uploadButton-input" ngModel #imageInput name="file" type="file" accept="image/*, application/pdf" id="upload" multiple/>
+											<label class="uploadButton-button ripple-effect" for="upload"><i class="icon-feather-camera"></i></label>
+										</div>
+										<div>
+											<span class="uploadButton uploadButton-file-name">
+												<button type="submit" class="uploadButton-button">Post</button>
+											</span>
+										</div>									  
+									</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- Posts Feed -->
+					<div class="dashboard-box main-box-in-row">
+						<div class="headline">
+							<h3><i class="icon-line-awesome-newspaper-o">
+                			</i> Latest Posts</h3>
+						</div>
+
+						<div class="content">
+							<ul class="dashboard-box-list">
+								<li *ngFor="let post of posts | paginate: { itemsPerPage: 10, currentPage: p } let i = index;">
+									<div class="freelancer-overview manage-candidates">
+										<div class="freelancer-overview-inner">
+											<!-- Profile / User Image -->
+											<div class="freelancer-avatar">
+												<div class="verified-badge"></div>
+												<a href="#">
+													<img src="{{post.user?.image}}" alt="">
+												</a>
+											</div>
+											<!-- Profile / User Details -->
+											<div class="freelancer-name">
+												<h4>
+													<a (click)="goToLoggedUser(post.user?.id, i)">
+														{{post.user?.name}} {{post.user?.surname}}
+													</a>
+												</h4>
+												<span class="freelancer-detail-item">
+													<p><i class="icon-feather-user like-post"></i>{{post.user?.tag}}</p>
+												</span>
+												<span class="freelancer-detail-item">
+													<p><i class="icon-material-outline-location-on like-post"></i>{{post.user?.city}}</p>
+												</span>
+											</div>
+										</div>
+									</div>
+
+									<!-- Post Content -->
+									<div class="boxed-list-item">
+										<div class="item-content">
+											<p>{{post.text}}</p>
+											<div class="item-details mt-1">
+											<img class="mt-2" src="http://localhost:8000/images/posts/{{post?.file}}" width="100%" alt="" srcset="">
+											</div>
+
+											<div class="d-flex mb-1 mt-1">
+												<div class="p-2">
+													<div class="detail-item"><a style="cursor: pointer;" (click)="giveLike(post?.id)">
+														<i class="icon-material-outline-thumb-up like-post give-like"></i> {{post['likes'].length}}</a></div>
+												</div>
+												<div class="p-2">
+													<div class="detail-item"><i class="icon-feather-message-circle like-post"></i> {{post['comments'].length}}</div>
+												</div>
+												<div class="ml-auto p-2">
+													<div class="detail-item"><i class="icon-feather-clock like-post"></i> {{data[i]}}</div>
+												</div>
+											</div>
+											<!-- Post Comments -->
+											<div class="card-footer mt-1">
+												<div class="d-flex flex-row bd-highlight mb-3" *ngFor="let comment of post.comments">
+													<div class="col-1 p-2">
+														<a href="#"><img src="{{comment.user?.image}}" class="profile-img" alt=""></a>
+													</div>
+													<div class="col-11 p-2" >
+														<h4><a href="#">{{comment.user?.name}} {{comment.user?.surname}}</a></h4>
+														<p>{{comment?.description}}</p>
+													</div>
+												</div>
+												<input [(ngModel)]="postComment" (keyup)="createComment($event, post['id'])" class="mt-3" placeholder="Enter your comment!">
+											</div>
+										</div>
+									</div>
+								</li>
+								<pagination-controls (pageChange)="p = $event"></pagination-controls>
+							</ul>
+						</div>
+					</div>
+				</div>
+				
+				<!-- Right Column -->
+				<div class="col-xl-4">
+					<div class="dashboard-box child-box-in-row"> 
+						<!-- Crypto Widget -->
+						<div class="fun-fact" data-fun-fact-color="#36bd78" *ngIf="cryptos">
+							<div class="fun-fact-text" *ngFor="let crypto of objectKeys(cryptos)">
+								<span>Bitcoin Price</span>
+								<h3 class="mt-2">${{ cryptos[crypto] }}</h3>
+							</div>
+							<div class="fun-fact-icon">
+								<i class="icon-line-awesome-bitcoin"></i>
+							</div>
+						</div>
+					</div>
+					<div class="dashboard-box child-box-in-row">
+						<!-- Weather Widget --> 
+						<div class="fun-fact" data-fun-fact-color="#b81b7f">
+							<div class="fun-fact-text" *ngIf="weather">
+								<span>{{ weather.name }} ({{ weather.sys.country }})</span>
+								<h3 class="mt-2 mb-2">{{ weather.main.temp}}°</h3>
+								<p class="mb-0">{{ weather.main.temp_min}}° / {{ weather.main.temp_max}}°</p>
+							</div>
+							<div class="fun-fact-icon">
+								<i class="icon-material-outline-cloud"></i>
+							</div>
+						</div>
+					</div>
+						 
+					<div class="dashboard-box child-box-in-row"> 
+						<div class="headline">
+							<h3><i class="icon-line-awesome-newspaper-o"></i> Trending Crypto News</h3>
+						</div>	
+						<div class="content with-padding">
+							<!-- News Widget --> 
+							<div class="dashboard-note" *ngFor="let new of news">
+								<p><i class="icon-feather-alert-circle like-post"></i> {{new}}</p>
+							</div>
+						</div>
+
+
+					</div>
+
+					<div class="dashboard-box">
+						<div class="headline">
+							<h3><i class="icon-material-baseline-notifications-none"></i> Notifications</h3>
+							<button class="mark-as-read ripple-effect-dark" data-tippy-placement="left" title="Mark all as read">
+									<i class="icon-feather-check-square"></i>
+							</button>
+						</div>
+						<div class="content">
+							<ul class="dashboard-box-list">
+								<li>
+									<span class="notification-icon"><i class="icon-material-outline-group"></i></span>
+									<span class="notification-text">
+										<strong>Michael Shannah</strong> applied for a job <a href="#">Full Stack Software Engineer</a>
+									</span>
+									<!-- Buttons -->
+									<div class="buttons-to-right">
+										<a href="#" class="button ripple-effect ico" title="Mark as read" data-tippy-placement="left"><i class="icon-feather-check-square"></i></a>
+									</div>
+								</li>
+								<li>
+									<span class="notification-icon"><i class=" icon-material-outline-gavel"></i></span>
+									<span class="notification-text">
+										<strong>Gilber Allanis</strong> placed a bid on your <a href="#">iOS App Development</a> project
+									</span>
+									<!-- Buttons -->
+									<div class="buttons-to-right">
+										<a href="#" class="button ripple-effect ico" title="Mark as read" data-tippy-placement="left"><i class="icon-feather-check-square"></i></a>
+									</div>
+								</li>
+								<li>
+									<span class="notification-icon"><i class="icon-material-outline-autorenew"></i></span>
+									<span class="notification-text">
+										Your job listing <a href="#">Full Stack Software Engineer</a> is expiring
+									</span>
+									<!-- Buttons -->
+									<div class="buttons-to-right">
+										<a href="#" class="button ripple-effect ico" title="Mark as read" data-tippy-placement="left"><i class="icon-feather-check-square"></i></a>
+									</div>
+								</li>
+								<li>
+									<span class="notification-icon"><i class="icon-material-outline-group"></i></span>
+									<span class="notification-text">
+										<strong>Sindy Forrest</strong> applied for a job <a href="#">Full Stack Software Engineer</a>
+									</span>
+									<!-- Buttons -->
+									<div class="buttons-to-right">
+										<a href="#" class="button ripple-effect ico" title="Mark as read" data-tippy-placement="left"><i class="icon-feather-check-square"></i></a>
+									</div>
+								</li>
+								<li>
+									<span class="notification-icon"><i class="icon-material-outline-rate-review"></i></span>
+									<span class="notification-text">
+										<strong>David Peterson</strong> left you a <span class="star-rating no-stars" data-rating="5.0"></span> rating after finishing <a href="#">Logo Design</a> task
+									</span>
+									<!-- Buttons -->
+									<div class="buttons-to-right">
+										<a href="#" class="button ripple-effect ico" title="Mark as read" data-tippy-placement="left"><i class="icon-feather-check-square"></i></a>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+					
+
+						<!-- Dashboard Box / End -->
+
+				</div>
+				
+			</div>
+			<!-- Row / End -->
+				
+
+			
+
+			<app-footer></app-footer>
+
+		</div>
+	</div>
+
+</div>
+
+
+
+												
