new dashboard styles added

--- a/src/app/_components/navigation/auth-nav/auth-nav.component.html
+++ b/src/app/_components/navigation/auth-nav/auth-nav.component.html
@@ -1,4 +1,4 @@
-<!-- <header id="header" *ngIf="authService.isLogged()"> -->
+<header id="header" *ngIf="authService.isLogged()">
     <div class="container-fluid">
               
       <!-- Left Side Content -->
@@ -163,4 +163,4 @@
       <!-- Right Side Content / End -->
   
     </div>
-    <!-- </header> -->
+    </header>
