--- a/src/app/_components/navigation/guest-nav/guest-nav.component.html
+++ b/src/app/_components/navigation/guest-nav/guest-nav.component.html
@@ -1,4 +1,4 @@
-<!-- <header *ngIf="!authService.isLogged()"> -->
+<header *ngIf="!authService.isLogged()">
     <nav class="container navbar navbar-light justify-content-between">
       <a class="navbar-brand" href="#">MediaTalk</a>
       <div class="nav-menu">
@@ -9,4 +9,4 @@
       <a class="btn btn-primary" routerLink="sign-up">Sign Up</a>
       </div>
     </nav>
-<!-- </header> -->
+</header>
