--- a/src/app/_components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/_components/dashboard/sidebar/sidebar.component.html
@@ -35,7 +35,7 @@
                     <ul data-submenu-title="Account">
                         <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/profile"><i class="icon-feather-user"></i> Profile</a></li>
                         <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/settings"><i class="icon-material-outline-settings"></i> Settings</a></li>
-                        <!-- <li><a (click)="logout()"><i class="icon-material-outline-power-settings-new"></i> Logout</a></li> -->
+                        <li><a (click)="logout()"><i class="icon-material-outline-power-settings-new"></i> Logout</a></li>
                     </ul>  
                 </div>
             </div>
