--- a/src/app/_components/landing/landing.component.html
+++ b/src/app/_components/landing/landing.component.html
@@ -1,13 +1,14 @@
 <div class="container mh">
-    <div class="row">
-        <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
-            <h1>
+    <div class="row ">
+        <div class=" ol-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
+            <h1 class="mb-3">
                 Discover the new way to navigate through social networks
             </h1>
-            <p>
+            <p class="mt-2">
                 Now you can find everything that interests you in one place. Share content to your contacts with a single click.
+                Now you can find everything that interests you in one place. 
             </p>
-            <a routerLink="sign-up" class="btn btn-primary">
+            <a routerLink="sign-up" class="btn btn-primary mt-4">
                 Get started now
             </a>
         </div>
@@ -22,9 +23,9 @@
             <div class="col">
             </div>
             <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                <h3 class="text-center">
+                <h2 class="text-center">
                     How It Works?
-                </h3>                    
+                </h2>                    
                 <p class="text-center">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
                 </p>
@@ -107,7 +108,7 @@
         <h1>
             Ready to grow your network?
         </h1>
-        <button class="btn btn-danger button-cta">Get started now</button>
+        <button class="btn btn-danger button-cta mb-3">Get started now</button>
     </div>
   </div>
   <!-- Footer
