--- a/src/app/_components/dashboard/dashboard-styles.scss
+++ b/src/app/_components/dashboard/dashboard-styles.scss
@@ -14745,7 +14745,7 @@ ul.dashboard-box-list > li:hover {
 		padding: 0;
 	}
 
-	h1 { font-size: 32px; }
+	h1 { font-size: 32px; line-height: 46px; }
 	h2 { font-size: 26px; }
 	h3 { font-size: 22px; }
 	h4 { font-size: 16px; }
