--- a/src/app/_components/navigation/guest-nav/guest-nav.component.html
+++ b/src/app/_components/navigation/guest-nav/guest-nav.component.html
@@ -2,7 +2,7 @@
     <nav class="container navbar navbar-light justify-content-between">
       <a class="navbar-brand" href="#">MediaTalk</a>
       <div class="nav-menu">
-      <a href="/#how-it-works"><span>How it Works</span></a>
+      <a href="#"><span>How it Works</span></a>
       <a href="#"><span>About</span></a>
       <a href="#"><span>Reviews</span></a>
       <a routerLink="sign-in"><span>Sign In</span></a>
