login/register styles

--- a/src/app/_components/landing/landing.component.html
+++ b/src/app/_components/landing/landing.component.html
@@ -1,6 +1,6 @@
-<div class="container mh">
-    <div class="row ">
-        <div class=" ol-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
+<div class="container">
+    <div class="row mh">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
             <h1 class="mb-3">
                 Discover the new way to navigate through social networks
             </h1>
@@ -22,11 +22,11 @@
         <div class="row">
             <div class="col">
             </div>
-            <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                <h2 class="text-center">
+            <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 text-center">
+                <h2 class="mb-3">
                     How It Works?
                 </h2>                    
-                <p class="text-center">
+                <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
                 </p>
             </div>
@@ -34,30 +34,30 @@
             </div>
           </div>
         <div class="row mt-5">
-            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
                 <img class="icons mb-3" src="../../../assets/img/news.svg" width="50%" alt="" srcset="">
-                <h4 class="text-center">
+                <h3 class="mt-3 works-title">
                     Lastest News
-                </h4>
-                <p class="text-center">
+                </h3>
+                <p class="mt-1">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
             </div>
-            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
                 <img class="icons mb-3" src="../../../assets/img/yt.svg" width="50%" alt="" srcset="">
-                <h4 class="text-center">
+                <h3 class="mt-3 works-title">
                     Trending Videos
-                </h4>
-                <p class="text-center">
+                </h3>
+                <p class="mt-1">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
             </div>
-            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
                 <img class="icons mb-3" src="../../../assets/img/weather.svg" width="50%" alt="" srcset="">
-                <h4 class="text-center">
+                <h3 class="mt-3 works-title">
                     Local Weather
-                </h4>
-                <p class="text-center">
+                </h3>
+                <p class="mt-1">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
             </div>
@@ -68,17 +68,16 @@
   <div class="container sections">
     <div class="row">
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
-            <span class="dot"></span>
-            <h3>
+            <h3 class="mb-3">
                Share content with your friends
             </h3>
-            <p>
+            <p class="mb-3">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.
             </p>
-            <a class="link" href="/sign-up.html">Register now and make your first post <i class="fas fa-arrow-right"></i></a>
+            <a class="link" routerLink="/sign-up">Register now and make your first post <i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
-            <img src="app.png" alt="Ilustracion" width="100%" srcset="">
+            <img src="../../../assets/img/masonry.png" alt="Ilustracion" width="100%" srcset="">
         </div>
     </div>
   </div>
@@ -90,107 +89,27 @@
                 <img src="../../../assets/img/profiles.png" alt="Ilustracion" width="100%" srcset="">
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
-                <span class="dot"></span>
-                <h3>
+                <h3 class="mb-3">
                     Lorem ipsum dolor sit amet consectetur
                 </h3>
-                <p>
+                <p class="mb-3">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.
                 </p>
-                <a class="link" href="#">Lorem ipsum dolor sit amet dolor <i class="fas fa-arrow-right"></i></a>
+                <a class="link" routerLink="/sign-up">Register now and make your first post <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
   </div>
   
-  <div class="container-fluid cta center-block">
-    <div class="text-center">
-        <h1>
-            Ready to grow your network?
-        </h1>
-        <button class="btn btn-danger button-cta mb-3">Get started now</button>
+  <div class="container-fluid center-block">
+    <div class="text-center mt-5">
+        <h2 class="mb-3">
+            Are you ready to grow your Network?
+        </h2>                    
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+        </p>
+        <a routerLink="/sign-up" class="btn btn-primary button-cta mt-3 mb-5">Get started now</a>
     </div>
   </div>
-  <!-- Footer
-================================================== -->
-<div id="footer">
-
-	<!-- Footer Middle Section -->
-	<div class="footer-middle-section">
-		<div class="container">
-			<div class="row">
-
-        <!-- Newsletter -->
-				<div class="col-xl-4 col-lg-4 col-md-12">
-					<h3>MediaTalk</h3>
-					<p>Weekly breaking news, analysis and cutting edge advices on job searching.</p>
-				</div>
-
-				<!-- Links -->
-				<div class="col-xl-2 col-lg-2 col-md-3">
-					<div class="footer-links">
-						<h3>For Candidates</h3>
-						<ul>
-							<li><a href="#"><span>Browse Jobs</span></a></li>
-							<li><a href="#"><span>Add Resume</span></a></li>
-							<li><a href="#"><span>Job Alerts</span></a></li>
-							<li><a href="#"><span>My Bookmarks</span></a></li>
-						</ul>
-					</div>
-				</div>
-
-				<!-- Links -->
-				<div class="col-xl-2 col-lg-2 col-md-3">
-					<div class="footer-links">
-						<h3>For Employers</h3>
-						<ul>
-							<li><a href="#"><span>Browse Candidates</span></a></li>
-							<li><a href="#"><span>Post a Job</span></a></li>
-							<li><a href="#"><span>Post a Task</span></a></li>
-							<li><a href="#"><span>Plans & Pricing</span></a></li>
-						</ul>
-					</div>
-				</div>
-
-				<!-- Links -->
-				<div class="col-xl-2 col-lg-2 col-md-3">
-					<div class="footer-links">
-						<h3>Helpful Links</h3>
-						<ul>
-							<li><a href="#"><span>Contact</span></a></li>
-							<li><a href="#"><span>Privacy Policy</span></a></li>
-							<li><a href="#"><span>Terms of Use</span></a></li>
-						</ul>
-					</div>
-				</div>
-
-				<!-- Links -->
-				<div class="col-xl-2 col-lg-2 col-md-3">
-					<div class="footer-links">
-						<h3>Account</h3>
-						<ul>
-							<li><a href="#"><span>Log In</span></a></li>
-							<li><a href="#"><span>My Account</span></a></li>
-						</ul>
-					</div>
-        </div>
-        
-			</div>
-		</div>
-	</div>
-	<!-- Footer Middle Section / End -->
-	
-	<!-- Footer Copyrights -->
-	<div class="footer-bottom-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-xl-12">
-					© 2020 <strong>MediaTalk</strong>. All Rights Reserved.
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Footer Copyrights / End -->
-
-</div>
-<!-- Footer / End -->
+  <app-guest-footer></app-guest-footer>
