--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,7 +54,7 @@ html, body {
   }
   
   .vh {
-    height: 100vh;
+    height: 70vh;
   }
   
   .modal-backdrop {
@@ -109,4 +109,8 @@ html, body {
   
   .give-like:hover {
     font-size: 20px;
+  }
+
+  .works-title {
+    color: #3972E0;
   }
