--- a/src/app/_components/auth/sign-in/sign-in.component.html
+++ b/src/app/_components/auth/sign-in/sign-in.component.html
@@ -1,50 +1,4 @@
-<!-- <div class="container mh">
-    <div class="row">
-        <div class="col-5">
-          <img src="../../../../assets/asd.png" width="100%" alt="">
-        </div>
-        <div class="col-7 align-self-center">
-            <div class="row justify-content-center">
-              <div class="col-8">
-              <h2>Sign in to <strong>MediaTalk</strong></h2>
-              <p class="mt-4">Not a member? <a href="/sign-up.html">Sign up now</a></p>
-
-              <form #loginForm="ngForm" (ngSubmit)="onLogIn()">
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input class="form-control"
-                  [(ngModel)]="email"
-                  name="email"
-                  pattern="^\S+@\S+$"
-                  required="required"
-                  placeholder="" />
-                  
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">Password</label>
-                  <input class="form-control" [(ngModel)]="password"
-                  name="password"
-                  required="required"
-                  pattern=".{6,30}"
-                  type="password"
-                  placeholder="" />
-                </div>
-                <div class="form-group">
-                  <a class="link" 
-          [routerLink]="['/forgot-password']" 
-          routerLinkActive="link-active">
-          <span>Forgot password?</span>
-        </a>
-                </div>
-
-                <button type="submit" class="btn btn-primary">Sign In</button>
-              </form>
-            </div>
-          </div>
-        </div>
-    </div>
-</div> -->
-<div class="container">
+<div class="container ">
     <div class="row vh">
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
             <img src="../../../assets/img/ilus.png" alt="Ilustracion" width="100%" srcset="">
@@ -53,27 +7,31 @@
             <div class="row justify-content-center">
                 <div class="col-8">
                 <h2>Sign in to <strong>MediaTalk</strong></h2>
-                <p class="mt-4">Not a member? <a href="/sign-up.html">Sign up now</a></p>
+                <p class="mt-4 mb-3">Not a member? <a routerLink="/sign-up">Sign up now</a></p>
   
                 <form #loginForm="ngForm" (ngSubmit)="onLogIn()">
                   <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input class="form-control"
+                    <div class="input-with-icon-left no-border">
+                        <i class="icon-line-awesome-envelope"></i>
+                    <input class="input-text"
                     [(ngModel)]="email"
                     name="email"
                     pattern="^\S+@\S+$"
                     required="required"
-                    placeholder="" />
+                    placeholder="Email address" />
+                    </div>
                     
                   </div>
-                  <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input class="form-control" [(ngModel)]="password"
+                  <div class="form-group mt-2">
+                    <div class="input-with-icon-left no-border">
+                        <i class="icon-material-outline-lock"></i>
+                    <input class="input-text" [(ngModel)]="password"
                     name="password"
                     required="required"
                     pattern=".{6,30}"
                     type="password"
-                    placeholder="" />
+                    placeholder="Password" />
+                    </div>
                   </div>
                   <div class="form-group">
                     <a class="link" 
@@ -83,11 +41,10 @@
           </a>
                   </div>
   
-                  <button type="submit" class="btn btn-primary">Sign In</button>
+                  <button type="submit" class="btn btn-primary mt-2">Sign In</button>
                 </form>
               </div>
             </div>
         </div>
     </div>
 </div>
-<app-guest-footer></app-guest-footer>
