--- a/src/app/_components/navigation/guest-nav/guest-nav.component.html
+++ b/src/app/_components/navigation/guest-nav/guest-nav.component.html
@@ -1,6 +1,6 @@
 <header *ngIf="!authService.isLogged()">
     <nav class="container navbar navbar-light justify-content-between">
-      <a class="navbar-brand" href="#">MediaTalk</a>
+      <a class="navbar-brand" routerLink="/landing">MediaTalk</a>
       <div class="nav-menu">
       <a href="#"><span>How it Works</span></a>
       <a href="#"><span>About</span></a>
