--- a/src/app/_components/auth/sign-up/sign-up.component.html
+++ b/src/app/_components/auth/sign-up/sign-up.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-    <div class="row">
+    <div class="row vh">
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
             <img src="../../../assets/img/ilus.png" alt="Ilustracion" width="100%" srcset="">
         </div>
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
             <div class="row justify-content-center">
                 <div class="col-8">
-                    <h2>Sign up to <strong>MediaTalk</strong></h2>
+                    <h1>Sign up to <strong>MediaTalk</strong></h1>
                     <p class="mt-4 mb-3">Already a member? <a routerLink="/sign-in">Sign In</a></p>
   
                     <form #registerForm="ngForm" (ngSubmit)="onRegister()">
