login/register new styles

--- a/src/app/_components/dashboard/settings/settings.component.html
+++ b/src/app/_components/dashboard/settings/settings.component.html
@@ -72,6 +72,13 @@
 												<h5>City</h5>
 												<input type="text" class="with-border" name="city" ngModel value="">
 											</div>
+                                        </div>
+                                        
+                                        <div class="col-xl-6">
+											<div class="submit-field">
+												<h5>GitHub</h5>
+												<input type="text" class="with-border" name="github" ngModel value="">
+											</div>
 										</div>
 
 										<div class="col-xl-12">
