--- a/src/app/_components/auth/sign-in/sign-in.component.html
+++ b/src/app/_components/auth/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="container ">
     <div class="row vh">
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
-            <img src="../../../assets/img/ilus.png" alt="Ilustracion" width="100%" srcset="">
+            <img src="../../../../assets/img/sign-in.svg" alt="Ilustracion" width="100%" srcset="">
         </div>
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
             <div class="row justify-content-center">
