--- a/src/app/_components/dashboard/profile/profile.component.html
+++ b/src/app/_components/dashboard/profile/profile.component.html
@@ -193,9 +193,9 @@
                                                         </div>
                                                     </li>
                                                     <li>
-                                                        <a href="#">
+                                                        <a href="http://{{actualUser['user']?.github}}">
                                                             <i class="icon-brand-github"></i>
-                                                            github.com/pinko615
+                                                            {{actualUser['user']?.github}}
                                                         </a>
                                                     </li>
                                                 </ul>                                                
