--- a/src/app/_components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/_components/dashboard/sidebar/sidebar.component.html
@@ -25,10 +25,10 @@
                         <li><a href="#"><i class="icon-feather-camera"></i> Photography</a></li>
                     </ul>
                     
-                    <ul data-submenu-title="Organize and Manage">
-                        <li><a href="#"><i class="icon-material-outline-business-center"></i> Jobs</a>
+                    <ul data-submenu-title="Features">
+                        <li><a href="#"><i class="icon-material-outline-account-balance-wallet"></i> Wallet</a>
                         </li>
-                        <li><a href="#"><i class="icon-material-outline-assignment"></i> Tasks</a>
+                        <li><a href="#"><i class="icon-material-outline-cloud"></i> Weather</a>
                         </li>
                     </ul>
 
